[project]
name = "utils-psa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[[project.authors]]
name = "Anumeya Sehgal"
email = "anumeyasehgal@proton.me"

[dependency-groups]
dev = [ "black>=25.1.0", "commitizen>=4.8.3", "flake8>=7.2.0", "isort>=6.0.1", "pre-commit>=4.2.0",]

[build-system]
requires = [ "setuptools>=61.0.0",]
build-backend = "setuptools.build_meta"

[project.scripts]
utils-psa = "utils-psa.__main__:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = [ "E203", "W503",]

[tool.setuptools.packages.find]
where = [ "src",]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true

